@@ -1,6 +1,5 @@
 package com.finni.discordmodbot.command;
 
-import net.essentialsx.api.v2.services.discord.InteractionEvent;
 import org.bukkit.Server;
 import org.bukkit.command.CommandSender;
 import org.bukkit.permissions.Permission;
@@ -14,23 +13,20 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class CustomConsoleSender implements CommandSender {
     private final CommandSender sender;
 
     private String message;
 
-    private InteractionEvent event;
 
     public String getMessage(){
         return message;
     }
 
-    public CustomConsoleSender(CommandSender sender, InteractionEvent event) {
+    public CustomConsoleSender(CommandSender sender) {
         this.sender = sender;
         this.message = "";
-        this.event = event;
     }
 
     @Override
@@ -42,9 +38,9 @@ public class CustomConsoleSender implements CommandSender {
 
     @Override
     public void sendMessage(String[] messages) {
-        List<String> queue = Arrays.stream(messages).collect(Collectors.toList());
+        List<String> queue = Arrays.stream(messages).toList();
         if (queue.size() > 0)
-            sender.sendMessage(queue.toArray(new String[queue.size()]));
+            sender.sendMessage(queue.toArray( new String[0] ));
 
     }
 
@@ -59,12 +55,12 @@ public class CustomConsoleSender implements CommandSender {
     }
 
     @Override
-    public Server getServer() {
+    public @NotNull Server getServer() {
         return sender.getServer();
     }
 
     @Override
-    public String getName() {
+    public @NotNull String getName() {
         return sender.getName();
     }
 
@@ -75,47 +71,47 @@ public class CustomConsoleSender implements CommandSender {
     }
 
     @Override
-    public boolean isPermissionSet(String name) {
+    public boolean isPermissionSet( @NotNull String name) {
         return sender.isPermissionSet(name);
     }
 
     @Override
-    public boolean isPermissionSet(Permission perm) {
+    public boolean isPermissionSet( @NotNull Permission perm) {
         return sender.isPermissionSet(perm);
     }
 
     @Override
-    public boolean hasPermission(String name) {
+    public boolean hasPermission( @NotNull String name) {
         return sender.hasPermission(name);
     }
 
     @Override
-    public boolean hasPermission(Permission perm) {
+    public boolean hasPermission( @NotNull Permission perm) {
         return sender.hasPermission(perm);
     }
 
     @Override
-    public PermissionAttachment addAttachment(Plugin plugin, String name, boolean value) {
+    public @NotNull PermissionAttachment addAttachment( @NotNull Plugin plugin, @NotNull String name, boolean value) {
         return sender.addAttachment(plugin, name, value);
     }
 
     @Override
-    public PermissionAttachment addAttachment(Plugin plugin) {
+    public @NotNull PermissionAttachment addAttachment( @NotNull Plugin plugin) {
         return sender.addAttachment(plugin);
     }
 
     @Override
-    public PermissionAttachment addAttachment(Plugin plugin, String name, boolean value, int ticks) {
+    public PermissionAttachment addAttachment( @NotNull Plugin plugin, @NotNull String name, boolean value, int ticks) {
         return sender.addAttachment(plugin, name, value, ticks);
     }
 
     @Override
-    public PermissionAttachment addAttachment(Plugin plugin, int ticks) {
+    public PermissionAttachment addAttachment( @NotNull Plugin plugin, int ticks) {
         return sender.addAttachment(plugin, ticks);
     }
 
     @Override
-    public void removeAttachment(PermissionAttachment attachment) {
+    public void removeAttachment( @NotNull PermissionAttachment attachment) {
         sender.removeAttachment(attachment);
     }
 
@@ -125,7 +121,7 @@ public class CustomConsoleSender implements CommandSender {
     }
 
     @Override
-    public Set<PermissionAttachmentInfo> getEffectivePermissions() {
+    public @NotNull Set<PermissionAttachmentInfo> getEffectivePermissions() {
         return sender.getEffectivePermissions();
     }
 
